@@ -5,6 +5,7 @@
 - Rename "Check against solution" preference to "Solution Warnings"
 - Remove warnings and highlighter settings
 - Remove custom game creation
+- Fix earmark warnings not getting cleared up when disabling the setting
 
 49.0 - September 12, 2025
 ==========================
